# py-theta-client

./: .gitignore  docker-compose.yml  missing_eod_greeks.csv  missing_report.txt  openapiv3.yaml  pyproject.toml  request.py  test.py  urls_for_claude.txt
scripts/: find_missing.py  get_symbol_universe.py  test_tc.py
src/theta_client/: client.py  dataframe_collector.py  file_writer.py  http_worker.py  job.py  metrics.py  progress_display.py  queue_worker.py  requests.py  response_processor.py  schemas.py  terminal.py  utils.py
tests/: test.py  test_new_endpoints.py
