[project]
name = "py-theta-client"
version = "0.3.0"
description = "Python ThetaClient"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.28.1",
    "minio>=7.2.20",
    "polars>=1.0.0",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "psutil>=7.2.1",
    "pytest>=8.0.0",
    "pytest-httpx>=0.35.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theta_client"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
skip-magic-trailing-comma = false
indent-style = "space"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]

ignore = [
    "E501",  # Line too long (handled by formatter)
    "E203",  # Whitespace before ':' (conflicts with Black)
    "E402"
]
